# source-bruh

./: .firebaserc  .gitignore  LICENESE.md  LICENSE  README.md  chrome-extension-popup.tsx  config.json  download_data.py  firebase.json  manifest.json  package-lock.json  package.json  popup.html  pytest.ini  style.css
android-app/: README.md  build.gradle  settings.gradle
android-app/app/: build.gradle
app/: page.tsx
backend/: config.yaml  config_loader.py
backend/src/: config_loader.py  ingest.py  photos_client.py  server.py
data/: vector.db
frontend/: offscreen.html  package.json  popup.html  postcss.config.js  vite.config.js
frontend/public/: manifest.json
frontend/src/: ExtensionPopup.jsx  api.js  background.js  extension-config.json  firebase.js  offscreen.js  popup.jsx  style.css
functions/: config.yaml  config_loader.py  db.py  ingest.py  llm.py  logger_config.py  main.py  photos_client.py  requirements.txt  server.py
functions/scripts/: clone_image_collection.py  import_local_images.py  migrate_embedding_vectors.py
functions/tests/: test_db_image_lookup.py  (+4 more)
react-native/: .gitignore  PLAN.md  README.md  app.json  package-lock.json  package.json  tsconfig.json
scripts/: apply-private-backend.ps1
src/: ExtensionPopup.jsx  config.py  db.py  download_data.py  download_data_old.py  embed.py  extension-config.json  ingest.py  llm.py  manage_db.py  photos_client.py  popup.js  pyproject.toml  server.py  style.css
src/pages/: Landing.jsx  Query.jsx  Results.jsx  Settings.jsx
tests/: test_photos_client_smoke.py  test_server_routes.py
(+64 files in other folders)
